[gd_scene load_steps=3 format=3 uid="uid://door_scene_001"]

[ext_resource type="Script" path="res://Door.gd" id="1_door"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door"]
size = Vector2(60, 120)

[node name="Door" type="Area2D"]
script = ExtResource("1_door")

[node name="DoorSprite" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -60.0
offset_right = 30.0
offset_bottom = 60.0
color = Color(0.4, 0.2, 0.1, 1)

[node name="DoorFrame" type="ColorRect" parent="."]
offset_left = -35.0
offset_top = -65.0
offset_right = 35.0
offset_bottom = 65.0
color = Color(0.2, 0.1, 0.05, 1)

[node name="DoorHandle" type="ColorRect" parent="."]
offset_left = 15.0
offset_top = -5.0
offset_right = 25.0
offset_bottom = 5.0
color = Color(0.8, 0.7, 0.3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_door")

[node name="PromptLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -90.0
offset_right = 25.0
offset_bottom = -70.0
text = "Press F"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]